@@ -51,11 +51,7 @@ import edu.cmu.cs.dennisc.java.util.logging.Logger;
 import edu.cmu.cs.dennisc.pattern.Lazy;
 import edu.cmu.cs.dennisc.property.PropertyUtilities;
 import edu.cmu.cs.dennisc.property.StringProperty;
-import org.lgna.project.annotations.ClassTemplate;
-import org.lgna.project.annotations.GetterTemplate;
-import org.lgna.project.annotations.MethodTemplate;
-import org.lgna.project.annotations.ValueTemplate;
-import org.lgna.project.annotations.Visibility;
+import org.lgna.project.annotations.*;
 import org.lgna.project.reflect.ClassInfoManager;
 import org.lgna.project.reflect.MethodInfo;
 
@@ -117,8 +113,7 @@ public class JavaType extends AbstractType<JavaConstructor, JavaMethod, JavaFiel
 
   /* package-private */
   static AbstractType<?, ?, ?> getWrapperTypeIfNecessary(AbstractType<?, ?, ?> type) {
-    if (type instanceof JavaType) {
-      JavaType javaType = (JavaType) type;
+    if (type instanceof JavaType javaType) {
       if (javaType.isPrimitive()) {
         JavaType wrapperType = mapPrimitiveToWrapper.get(javaType);
         if (wrapperType != null) {
@@ -158,16 +153,7 @@ public class JavaType extends AbstractType<JavaConstructor, JavaMethod, JavaFiel
   }
 
   public static JavaType getInstance(final ClassReflectionProxy classReflectionProxy) {
-    if (classReflectionProxy != null) {
-      return mapReflectionProxyToInstance.getInitializingIfAbsent(classReflectionProxy, new InitializingIfAbsentMap.Initializer<ClassReflectionProxy, JavaType>() {
-        @Override
-        public JavaType initialize(ClassReflectionProxy key) {
-          return new JavaType(classReflectionProxy);
-        }
-      });
-    } else {
-      return null;
-    }
+    return classReflectionProxy != null ? mapReflectionProxyToInstance.get(classReflectionProxy, JavaType::new) : null;
   }
 
   public static JavaType getInstance(Class<?> cls) {
@@ -331,9 +317,7 @@ public class JavaType extends AbstractType<JavaConstructor, JavaMethod, JavaFiel
       Class<?>[] dstParameterClses = trimLast(srcParameterClses);
       try {
         rv = src.getDeclaringClass().getMethod(name, dstParameterClses);
-        if (rv.getReturnType() == srcReturnCls) {
-          //pass
-        } else {
+        if (rv.getReturnType() != srcReturnCls) {
           rv = null;
         }
       } catch (NoSuchMethodException nsme) {
@@ -447,8 +431,8 @@ public class JavaType extends AbstractType<JavaConstructor, JavaMethod, JavaFiel
 
   @Override
   public boolean isEquivalentTo(Object other) {
-    if (other instanceof JavaType) {
-      return classReflectionProxy.equals(((JavaType) other).classReflectionProxy);
+    if (other instanceof JavaType type) {
+      return classReflectionProxy.equals(type.classReflectionProxy);
     } else {
       return false;
     }
@@ -551,7 +535,7 @@ public class JavaType extends AbstractType<JavaConstructor, JavaMethod, JavaFiel
               if (valueTemplate != null) {
                 JavaMethod m = setter;
                 while (m != null) {
-                  JavaMethodParameter parameter0 = (JavaMethodParameter) m.getRequiredParameters().get(0);
+                  JavaMethodParameter parameter0 = (JavaMethodParameter) m.getRequiredParameters().getFirst();
                   parameter0.setValueTemplate(valueTemplate);
                   m = m.getNextShorterInChain();
                 }
