@@ -62,7 +62,7 @@ public abstract class IteratingOperation extends Operation {
   protected abstract Triggerable getNext(List<UserActivity> finishedSteps);
 
   protected Object getLastValueProduced(List<UserActivity> finishedSteps) {
-    return finishedSteps.get(finishedSteps.size() - 1).getProducedValue();
+    return finishedSteps.getLast().getProducedValue();
   }
 
   protected void handleSuccessfulCompletionOfSubModels(UserActivity activity) {
