@@ -53,8 +53,8 @@ import edu.cmu.cs.dennisc.scenegraph.Geometry;
 import edu.cmu.cs.dennisc.scenegraph.Visual;
 import org.alice.math.immutable.Point3;
 
-import java.awt.Rectangle;
 import java.awt.Point;
+import java.awt.Rectangle;
 import java.util.List;
 
 /**
@@ -89,7 +89,7 @@ public class PickParameters {
     if (this.pickResults.isEmpty()) {
       rv = new PickResult(this.sgCamera);
     } else {
-      rv = this.pickResults.get(0);
+      rv = this.pickResults.getFirst();
     }
     return rv;
   }
@@ -106,6 +106,7 @@ public class PickParameters {
     return this.mousePos.x;
   }
 
+  // We use this "flipped" y to account for the viewport vs AWT (mouse click)
   public int getFlippedY(Rectangle actualViewport) {
     return actualViewport.height - this.mousePos.y;
   }
