@@ -44,15 +44,20 @@
 package org.alice.ide;
 
 import edu.cmu.cs.dennisc.java.awt.CursorUtilities;
+import edu.cmu.cs.dennisc.java.io.FileUtilities;
 import edu.cmu.cs.dennisc.java.lang.ClassUtilities;
 import edu.cmu.cs.dennisc.java.lang.SystemUtilities;
 import edu.cmu.cs.dennisc.java.net.UriUtilities;
+import edu.cmu.cs.dennisc.java.util.logging.Logger;
 import edu.cmu.cs.dennisc.javax.swing.option.Dialogs;
+import edu.cmu.cs.dennisc.javax.swing.option.YesNoCancelResult;
+import org.alice.ide.croquet.models.projecturi.BackupProjectOperation;
 import org.alice.ide.frametitle.IdeFrameTitleGenerator;
 import org.alice.ide.project.ProjectDocumentState;
 import org.alice.ide.recentprojects.RecentProjectsListData;
 import org.alice.ide.uricontent.FileProjectLoader;
 import org.alice.ide.uricontent.UriProjectLoader;
+import org.apache.commons.io.FileUtils;
 import org.lgna.croquet.Application;
 import org.lgna.croquet.CancelException;
 import org.lgna.croquet.Group;
@@ -76,9 +81,11 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
-import java.util.ListIterator;
-import java.util.Set;
-import java.util.UUID;
+import java.time.LocalDateTime;
+import java.util.*;
+
+import static edu.cmu.cs.dennisc.java.io.FileUtilities.listFiles;
+import static org.alice.ide.ProjectFileUtilities.BACKUP_AUTO;
 
 /**
  * @author Dennis Cosgrove
@@ -87,12 +94,14 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
   public static final Group HISTORY_GROUP = Group.getInstance(UUID.fromString("303e94ca-64ef-4e3a-b95c-038468c68438"), "HISTORY_GROUP");
   public static final Group URI_GROUP = Group.getInstance(UUID.fromString("79bf8341-61a4-4395-9469-0448e66d9ac6"), "URI_GROUP");
 
-  private UserActivity projectActivity;
 
   public static ProjectApplication getActiveInstance() {
     return ClassUtilities.getInstance(PerspectiveApplication.getActiveInstance(), ProjectApplication.class);
   }
 
+  private final BackupProjectOperation backupProjectOperation = new BackupProjectOperation();
+
+  private UserActivity projectActivity;
   private HistoryListener projectHistoryListener;
 
   public ProjectApplication(ApiConfigurationManager apiConfigurationManager) {
@@ -163,10 +172,6 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
     return "Alice";
   }
 
-  public static String getVersionText() {
-    return ProjectVersion.getCurrentVersionText();
-  }
-
   public static String getVersionAdornment() {
     return String.valueOf(ProjectVersion.getCurrentVersion().getAliceIdentifier());
   }
@@ -181,13 +186,25 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
   }
 
   public void handleVersionNotSupported(File file, VersionNotSupportedException vnse) {
-    Dialogs.showUnableToOpenFileDialog(file, String.format("%s is not backwards compatible with:\n    File Version: %s\n    (Minimum Supported Version: %s)", getApplicationName(), vnse.getVersion(), vnse.getMinimumSupportedVersion()));
+    Dialogs.showUnableToOpenFileDialog(file, "%s is not backwards compatible with:\n    File Version: %s\n    (Minimum Supported Version: %s)".formatted(getApplicationName(), vnse.getVersion(), vnse.getMinimumSupportedVersion()));
   }
 
   private UriProjectLoader uriProjectLoader;
 
   public final URI getUri() {
     return this.uriProjectLoader != null ? this.uriProjectLoader.getUri() : null;
+  }
+
+  public final boolean isNewProject() {
+    return this.uriProjectLoader != null && this.uriProjectLoader.isNewProject();
+  }
+
+  public final boolean isBackup() {
+    return this.uriProjectLoader != null && this.uriProjectLoader.isBackup();
+  }
+
+  public final File getMainProjectFile() {
+    return this.uriProjectLoader != null ? this.uriProjectLoader.getMainProjectFile() : null;
   }
 
   @Deprecated
@@ -209,46 +226,43 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
 
   private int projectHistoryIndexFile = 0;
   private int projectHistoryIndexSceneSetUp = 0;
+  private int projectHistoryIndexBackups = 0;
+
+  private boolean isProjectUpToDateWith(int index) {
+    UndoHistory history = this.getProjectHistory();
+    return history == null || index == history.getInsertionIndex();
+  }
 
   public boolean isProjectUpToDateWithFile() {
-    UndoHistory history = this.getProjectHistory();
-    if (uriProjectLoader != null && uriProjectLoader.shouldBeSaved()) {
-      return false;
-    }
-    if (history == null) {
-      return true;
-    } else {
-      return this.projectHistoryIndexFile == history.getInsertionIndex();
-    }
+    return (uriProjectLoader == null || !uriProjectLoader.shouldBeSaved())
+            && isProjectUpToDateWith(projectHistoryIndexFile);
   }
 
   protected boolean isProjectUpToDateWithSceneSetUp() {
+    return isProjectUpToDateWith(projectHistoryIndexSceneSetUp);
+  }
+
+  protected boolean isProjectUpToDateWithBackups() {
+    return isProjectUpToDateWith(projectHistoryIndexBackups);
+  }
+
+  private int getHistoryIndex() {
     UndoHistory history = this.getProjectHistory();
-    if (history == null) {
-      return true;
-    } else {
-      return this.projectHistoryIndexSceneSetUp == history.getInsertionIndex();
-    }
+    return history != null ? history.getInsertionIndex() : PROJECT_HISTORY_INDEX_IF_PROJECT_HISTORY_IS_NULL;
   }
 
   private void updateHistoryIndexFileSync() {
-    UndoHistory history = this.getProjectHistory();
-    if (history != null) {
-      this.projectHistoryIndexFile = history.getInsertionIndex();
-    } else {
-      this.projectHistoryIndexFile = PROJECT_HISTORY_INDEX_IF_PROJECT_HISTORY_IS_NULL;
-    }
+    this.projectHistoryIndexFile = getHistoryIndex();
     this.updateHistoryIndexSceneSetUpSync();
     this.updateTitle();
   }
 
   protected void updateHistoryIndexSceneSetUpSync() {
-    UndoHistory history = this.getProjectHistory();
-    if (history != null) {
-      this.projectHistoryIndexSceneSetUp = history.getInsertionIndex();
-    } else {
-      this.projectHistoryIndexSceneSetUp = PROJECT_HISTORY_INDEX_IF_PROJECT_HISTORY_IS_NULL;
-    }
+    this.projectHistoryIndexSceneSetUp = getHistoryIndex();
+  }
+
+  private void updateHistoryIndexBackupSync() {
+    this.projectHistoryIndexBackups = getHistoryIndex();
   }
 
   private IdeFrameTitleGenerator frameTitleGenerator;
@@ -259,7 +273,7 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
     if (frameTitleGenerator == null) {
       this.frameTitleGenerator = this.createFrameTitleGenerator();
     }
-    this.getDocumentFrame().getFrame().setTitle(this.frameTitleGenerator.generateTitle(this.getUri(), this.isProjectUpToDateWithFile()));
+    this.getDocumentFrame().getFrame().setTitle(this.frameTitleGenerator.generateTitle(uriProjectLoader, isProjectUpToDateWithFile()));
   }
 
   private ProjectDocument getDocument() {
@@ -344,7 +358,7 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
     return getDocument().getUserActivity();
   }
 
-  //Look for an open child, if any. Otherwise return null.
+  //Look for an open child, if any. Otherwise, return null.
   @Override
   public UserActivity getOpenActivity() {
     UserActivity latest = super.getOpenActivity();
@@ -352,40 +366,258 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
   }
 
   public final void loadProject(UserActivity activity, UriProjectLoader uriProjectLoader) {
-    showWaitCursor();
+    loadProject(activity, uriProjectLoader, false, false, new HashSet<>());
+  }
+
+  private void loadProject(UserActivity activity, UriProjectLoader uriProjectLoader, boolean isLoadingBackups,
+                                 boolean isMainProjectCorrupted, Set<String> unloadableFiles) {
     this.uriProjectLoader = uriProjectLoader;
     if (uriProjectLoader != null) {
-      uriProjectLoader.deliverContentOnEventDispatchThread(proj -> projectLoaded(activity, proj));
+      showWaitCursor();
+      uriProjectLoader.deliverContentOnEventDispatchThread(proj -> {
+        try {
+          projectLoaded(activity, proj, isLoadingBackups, isMainProjectCorrupted, unloadableFiles);
+        } catch (RuntimeException re) {
+          handleProjectLoadException(re, activity);
+        } finally {
+          hideWaitCursor();
+        }
+      });
     }
   }
 
-  private void projectLoaded(UserActivity activity, Project project) {
-    if (project == null) {
-      uriProjectLoader = null;
-      activity.cancel();
-    } else {
-      try {
-        updateInterface(project);
-      } catch (RuntimeException re) {
-        var message = new StringBuilder("Errors reported in " + getUri());
-        Throwable cause = re;
-        do {
-          var causeMessage = cause.getLocalizedMessage();
-          if (causeMessage != null) {
-            message.append("\n\n  ").append(causeMessage);
+  protected boolean loadNewProjectBackup() {
+    File backupDir = projectFileUtilities.defaultBackupDirectory().toFile();
+    File backup = getNextBackup(null, backupDir, false, new HashSet<>());
+
+    if (backup != null) {
+      YesNoCancelResult result = backupProjectOperation.showUnsavedBackupProjectOpenedDialog();
+
+      return switch (result) {
+        case YES -> {
+          // load a backup
+          loadProject(newProjectActivity(), new FileProjectLoader(backup, false), true, true, new HashSet<>());
+
+          yield true;
+        }
+        case NO -> {
+          // discard the backups
+          try {
+            FileUtils.deleteDirectory(backupDir);
+          } catch (IOException e) {
+            Logger.throwable(e, "Unable to delete default backup directory.");
           }
-          cause = cause.getCause();
-        } while (cause != null);
-        // TODO clear project remnants from system
-        uriProjectLoader = null;
-        activity.cancel(new CancelException(re));
-        Dialogs.showError("Unable to Load Project", message.toString());
-        setPerspective(getDocumentFrame().getNoProjectPerspective());
-        UserActivity newActivity = getOverallUserActivity().getLatestActivity().newChildActivity();
-        getDocumentFrame().getNewProjectOperation().fire(newActivity);
+
+          yield false;
+        }
+        case CANCEL ->
+          // unreachable path
+          false;
+      };
+    }
+
+    return false;
+  }
+
+  private void projectLoaded(UserActivity activity, Project project, boolean isLoadingBackups,
+                             boolean isMainProjectCorrupted, Set<String> unloadableFiles) {
+    File saved = UriUtilities.getFile(getUri());
+
+    if (saved != null && !projectFileUtilities.isProject(saved)) {
+      return;
+    }
+
+    boolean isBackup = uriProjectLoader.isBackup();
+
+    if (project == null) {
+      handleProjectLoadError(saved, activity, isBackup, isLoadingBackups, isMainProjectCorrupted, unloadableFiles);
+    } else {
+      handleProjectLoadSuccess(project, saved, activity, isBackup, isLoadingBackups, isMainProjectCorrupted, unloadableFiles);
+    }
+  }
+
+  private void handleProjectLoadError(File projectFile, UserActivity activity, boolean isBackup,
+                                      boolean isLoadingBackups, boolean isMainProjectCorrupted,
+                                      Set<String> unloadableFiles) {
+    File backupDir = projectFileUtilities.appropriateBackupDirectory(projectFile).toFile();
+    boolean makeVrReady = uriProjectLoader.shouldMakeVrReady();
+    boolean isDefaultBackup = uriProjectLoader.isDefaultBackup();
+
+    unloadableFiles.add(projectFile.getName());
+
+    // If this failed attempt was already a load of a backup, keep the existing value
+    // Otherwise, this is the main project, so set this to true
+    if (!isLoadingBackups) {
+      isMainProjectCorrupted = true;
+    }
+
+    File mainProject = uriProjectLoader.getMainProjectFile();
+    LocalDateTime projectModifiedTime = FileUtilities.getModifiedDateTime(mainProject);
+    File backup = getNextBackup(projectModifiedTime, backupDir, isMainProjectCorrupted, unloadableFiles);
+
+    uriProjectLoader = null;
+    activity.cancel();
+
+    // A corrupted backup was manually loaded
+    if (isBackup && !isLoadingBackups) {
+      backupProjectOperation.showBackupLoadErrorDialog();
+
+      return;
+    }
+
+    if (backup != null) {
+      String backupName = isBackup
+              ? projectFile.getName()
+              : null;
+
+      if (backupProjectOperation.showProjectLoadErrorAndLoadBackupDialog(mainProject.getName(), backupName, isBackup)) {
+        loadProject(newProjectActivity(), new FileProjectLoader(backup, makeVrReady), true, isMainProjectCorrupted, unloadableFiles);
+      } else {
+        showNewProjectOperation();
+      }
+    } else {
+      if (isMainProjectCorrupted) {
+        if (isDefaultBackup) {
+          backupProjectOperation.showUnsavedBackupsLoadErrorDialog();
+        } else {
+          backupProjectOperation.showProjectAndAllBackupsLoadErrorDialog(mainProject.getName());
+        }
+        showNewProjectOperation();
+      } else {
+        if (backupProjectOperation.showProjectLoadRecentBackupsErrorAndLoadMainDialog(projectFile.getName())) {
+          loadProject(newProjectActivity(), new FileProjectLoader(mainProject, makeVrReady), false, isMainProjectCorrupted, unloadableFiles);
+        }
       }
     }
-    hideWaitCursor();
+  }
+
+  private void handleProjectLoadSuccess(Project project, File projectFile, UserActivity activity, boolean isBackup,
+                                        boolean isLoadingBackups, boolean isMainProjectCorrupted,
+                                        Set<String> unloadableFiles) {
+    if (isBackup && !isLoadingBackups) {
+      // User manually opened a backup, don't do anything special
+    } else if (unloadableFiles.isEmpty() && !uriProjectLoader.isNewProject()) {
+      // check for backups newer than the project
+
+      File backupDir = projectFileUtilities.appropriateBackupDirectory(projectFile).toFile();
+
+      LocalDateTime projectModifiedTime = FileUtilities.getModifiedDateTime(projectFile);
+
+      File backup = getNextBackup(projectModifiedTime, backupDir, false, unloadableFiles);
+
+      if (backup != null && backupProjectOperation.showMoreRecentBackupsDialog()) {
+        // restart load with backup
+        loadProject(newProjectActivity(), new FileProjectLoader(backup, uriProjectLoader.shouldMakeVrReady()), true, isMainProjectCorrupted, unloadableFiles);
+
+        return;
+      }
+    }
+
+    boolean isDefaultBackup = uriProjectLoader.isDefaultBackup();
+
+    updateInterface(project);
+
+    // If a backup of a saved project was successfully loaded, prompt the user for what to do next
+    if (isLoadingBackups && !isDefaultBackup) {
+      createProjectFromBackup(projectFile, uriProjectLoader.getMainProjectFile(), isMainProjectCorrupted);
+    }
+  }
+
+  private void handleProjectLoadException(RuntimeException re, UserActivity activity) {
+    var message = new StringBuilder("Errors reported in " + getUri());
+    Throwable cause = re;
+    Logger.throwable(re, getUri());
+    do {
+      var causeMessage = cause.getLocalizedMessage();
+      if (causeMessage != null) {
+        message.append("\n\n  ").append(causeMessage);
+      }
+      cause = cause.getCause();
+    } while (cause != null);
+    // TODO clear project remnants from system
+    uriProjectLoader = null;
+    activity.cancel(new CancelException(re));
+    Dialogs.showError("Unable to Load Project", message.toString());
+    showNewProjectOperation();
+  }
+
+  private void showNewProjectOperation() {
+    setPerspective(getDocumentFrame().getNoProjectPerspective());
+    UserActivity newActivity = getOverallUserActivity().getLatestActivity().newChildActivity();
+    getDocumentFrame().getNewProjectOperation().fire(newActivity);
+  }
+
+  private void createProjectFromBackup(File backup, File original, boolean isMainProjectCorrupted) {
+    YesNoCancelResult result = backupProjectOperation.showBackupProjectOpenedDialog(original.getName(), backup.getName(), isMainProjectCorrupted);
+
+    switch (result) {
+      case YES -> {
+        // replace the main project file
+
+        try {
+          saveProjectTo(original);
+        } catch (IOException ioe) {
+          Dialogs.showError("Unable to save file", ioe.getMessage());
+        }
+      }
+      case NO -> {
+        // Do nothing for now
+        // When the user saves, a new project will be created from this one
+      }
+      case CANCEL -> {
+        // load the main project file
+
+        loadProject(newProjectActivity(), new FileProjectLoader(original, uriProjectLoader.shouldMakeVrReady()));
+      }
+    }
+  }
+
+  private File getNextBackup(LocalDateTime modifiedTime, File backupDir, boolean isMainProjectCorrupted, Set<String> unloadableFiles) {
+    if (backupDir == null) {
+      return null;
+    }
+
+    String typeFilter = isMainProjectCorrupted ? "" : BACKUP_AUTO;
+    File[] backups = getSortedBackups(typeFilter, backupDir);
+
+    for (File backup : backups) {
+      if (!unloadableFiles.contains(backup.getName())) {
+        // if the main project is corrupted, return the latest backup
+        if (isMainProjectCorrupted || modifiedTime == null || modifiedTime == LocalDateTime.MIN) {
+          return backup;
+        }
+
+        // otherwise, return the latest backup, as long as it is newer than the main project
+
+        LocalDateTime backupCreatedTime = FileUtilities.getCreatedDateTime(backup);
+
+        if (backupCreatedTime.isAfter(modifiedTime)) {
+          return backup;
+        } else { // don't bother checking any backups older than the original project
+          return null;
+        }
+      }
+    }
+
+    return null;
+  }
+
+  protected File[] getSortedBackups(final String type, File backupDir) {
+    File[] backups = listFiles(backupDir, file -> file.isFile() && file.getName().startsWith(type));
+
+    Arrays.sort(backups, new Comparator<File>() {
+      @Override
+      public int compare(final File f1, final File f2) {
+        LocalDateTime f1Creation = FileUtilities.getCreatedDateTime(f1);
+        LocalDateTime f2Creation = FileUtilities.getCreatedDateTime(f2);
+        return f1Creation.compareTo(f2Creation);
+      }
+    });
+
+    // reverse the array to read the latest entries first
+    Collections.reverse(Arrays.asList(backups));
+
+    return backups;
   }
 
   private void updateInterface(Project project) {
@@ -395,36 +627,49 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
     }
     setProject(project);
     // Normally, the menu bar sub-menus are populated when the user is about to open one. However,
-    // the popupMenuWillBecomeVisible/popupMenuWillBecomeInvisible events don't fire on mac specifically
+    // the popupMenuWillBecomeVisible/popupMenuWillBecomeInvisible events don't fire on Mac specifically
     // for the top-level menu bar. As a workaround, all submenus are initialized at launch on Mac,
     // and re-initialized every time a new project is opened, so the recent projects list remains correct
     if (SystemUtilities.isMac()) {
       getDocumentFrame().getFrame().rebuildMenuBar();
     }
     getProjectHistory().addHistoryListener(projectHistoryListener);
-    URI uri = uriProjectLoader.getUri();
+    URI uri = getUri();
     File file = UriUtilities.getFile(uri);
     try {
       if ((file != null) && file.canWrite()) {
         RecentProjectsListData.getInstance().handleOpen(file);
       }
     } catch (Throwable throwable) {
-      throwable.printStackTrace();
+      Logger.throwable(throwable, file);
     }
 
     updateHistoryIndexFileSync();
     updateUndoRedoEnabled();
+
     projectFileUtilities.startAutoSaving();
   }
 
   protected abstract BufferedImage createThumbnail() throws Throwable;
 
   public final void saveProjectTo(File file) throws IOException {
-    uriProjectLoader = new FileProjectLoader(file);
+    FileProjectLoader nextLoader = new FileProjectLoader(file);
+    boolean savingNewProject = uriProjectLoader.isNewProject()
+            || (uriProjectLoader.isDefaultBackup() && !nextLoader.isDefaultBackup());
+
+    if (savingNewProject) {
+      projectFileUtilities.copyDefaultBackupDirectory(file);
+    }
+
+    uriProjectLoader = nextLoader;
 
     //    long startTime = System.currentTimeMillis();
 
-    projectFileUtilities.saveProjectTo(file);
+    projectFileUtilities.saveProjectTo(file, uriProjectLoader.isBackup());
+
+    if (savingNewProject) {
+      updateInterface(getUpToDateProject());
+    }
 
     //    long endTime = System.currentTimeMillis();
     //    double saveTime = ( endTime - startTime ) * .001;
@@ -432,6 +677,20 @@ public abstract class ProjectApplication extends PerspectiveApplication<ProjectD
     RecentProjectsListData.getInstance().handleSave(file);
 
     this.updateHistoryIndexFileSync();
+  }
+
+  public void backupActiveProject() {
+    try {
+      projectFileUtilities.backupActiveProject();
+    } catch (IOException e) {
+      Logger.throwable(e, "Unable to backup project.");
+    }
+  }
+
+  public final void updateBackupIndexAndSaveProjectTo(File file) throws IOException {
+    projectFileUtilities.saveCopyOfProjectTo(file);
+
+    updateHistoryIndexBackupSync();
   }
 
   public final void exportProjectTo(File file) throws IOException {
