@@ -42,10 +42,8 @@
  *******************************************************************************/
 package org.alice.ide.croquet.models.project.find.croquet;
 
-import java.util.List;
-import java.util.UUID;
-
 import edu.cmu.cs.dennisc.java.util.Lists;
+import edu.cmu.cs.dennisc.pattern.Criterion;
 import org.alice.ide.IDE;
 import org.alice.ide.ProjectDocument;
 import org.alice.ide.croquet.models.project.find.core.FindContentManager;
@@ -79,7 +77,8 @@ import org.lgna.project.ast.Expression;
 import org.lgna.project.ast.UserMethod;
 import org.lgna.project.ast.UserType;
 
-import edu.cmu.cs.dennisc.pattern.Criterion;
+import java.util.List;
+import java.util.UUID;
 
 /**
  * Search for code elements that match all terms in the search string.
@@ -148,7 +147,7 @@ public abstract class AbstractFindComposite extends FrameCompositeWithInternalIs
             searchResults.stencilHighlightForReference((Expression) nextValue.getValue());
           }
         } else {
-          IDE.getActiveInstance().getDocumentFrame().selectDeclarationComposite(DeclarationComposite.getInstance(((Expression) nextValue.getChildren().get(0).getValue()).getFirstAncestorAssignableTo(UserMethod.class)));
+          IDE.getActiveInstance().getDocumentFrame().selectDeclarationComposite(DeclarationComposite.getInstance(((Expression) nextValue.getChildren().getFirst().getValue()).getFirstAncestorAssignableTo(UserMethod.class)));
           IDE.getActiveInstance().getDocumentFrame().getHighlightStencil().hideIfNecessary();
         }
       }
@@ -172,9 +171,9 @@ public abstract class AbstractFindComposite extends FrameCompositeWithInternalIs
       if (searchResultsState.getValue() != null) {
         AbstractDeclaration searchObject = searchResultsState.getValue().getDeclaration();
         AbstractMethod abstractMethod = searchObject.getFirstAncestorAssignableTo(AbstractMethod.class);
-        if (searchObject instanceof AbstractMethod) {
-          AbstractType<?, ?, ?> declaringType = ((AbstractMethod) searchObject).getDeclaringType();
-          IDE.getActiveInstance().getMethodInvocations((AbstractMethod) searchObject);
+        if (searchObject instanceof AbstractMethod method) {
+          AbstractType<?, ?, ?> declaringType = method.getDeclaringType();
+          IDE.getActiveInstance().getMethodInvocations(method);
         }
       }
       return null;
