@@ -42,11 +42,6 @@
  *******************************************************************************/
 package org.alice.ide.croquet.models.project.find.croquet.tree;
 
-import java.util.List;
-import java.util.UUID;
-
-import javax.swing.Icon;
-
 import org.alice.ide.croquet.models.project.find.core.SearchResult;
 import org.alice.ide.croquet.models.project.find.croquet.AbstractFindComposite;
 import org.alice.ide.croquet.models.project.find.croquet.tree.nodes.DeclarationSeachTreeNode;
@@ -59,6 +54,10 @@ import org.lgna.project.ast.AbstractDeclaration;
 import org.lgna.project.ast.Expression;
 import org.lgna.project.ast.UserLambda;
 import org.lgna.project.ast.UserMethod;
+
+import javax.swing.Icon;
+import java.util.List;
+import java.util.UUID;
 
 /**
  * @author Matt May
@@ -169,7 +168,7 @@ public class FindReferencesTreeState extends CustomSingleSelectTreeState<SearchT
   public void moveSelectedDownOne() {
     SearchTreeNode selected = this.getValue();
     if (selected.getParent() == root) {
-      this.setValueTransactionlessly(selected.getChildren().get(0));
+      this.setValueTransactionlessly(selected.getChildren().getFirst());
     } else {
       if (selected.getLocationAmongstSiblings() < (selected.getParent().getChildren().size() - 1)) {
         this.setValueTransactionlessly(selected.getYoungerSibling());
@@ -188,11 +187,11 @@ public class FindReferencesTreeState extends CustomSingleSelectTreeState<SearchT
   }
 
   public boolean isEmpty() {
-    return root.getChildren().size() > 0;
+    return !root.getChildren().isEmpty();
   }
 
   public SearchTreeNode getTopValue() {
-    return root.getChildren().get(0);
+    return root.getChildren().getFirst();
   }
 
   public TwoDimensionalTreeCoordinate getSelectedCoordinates() {
