@@ -67,8 +67,8 @@ public abstract class UriPotentialClearanceIteratingOperation extends PotentialC
     if (uriProjectPair != null) {
       ProjectApplication.getActiveInstance().loadProject(activity, uriProjectPair);
     }
-    if (subSteps.size() > 0) {
-      UriProjectLoader value = (UriProjectLoader) subSteps.get(subSteps.size() - 1).getProducedValue();
+    if (!subSteps.isEmpty()) {
+      UriProjectLoader value = (UriProjectLoader) subSteps.getLast().getProducedValue();
       Logger.outln(value);
     }
 
