@@ -50,25 +50,14 @@ import edu.cmu.cs.dennisc.java.util.ResourceBundleUtilities;
 import edu.cmu.cs.dennisc.java.util.logging.Logger;
 import edu.cmu.cs.dennisc.java.util.zip.ZipUtilities;
 import edu.cmu.cs.dennisc.xml.XMLUtilities;
-import org.alice.ide.ast.export.type.FieldInfo;
-import org.alice.ide.ast.export.type.FunctionInfo;
-import org.alice.ide.ast.export.type.ResourceInfo;
-import org.alice.ide.ast.export.type.TypeSummary;
-import org.alice.ide.ast.export.type.TypeSummaryDataSource;
-import org.alice.ide.ast.export.type.TypeXmlUtitlities;
+import org.alice.ide.ast.export.type.*;
 import org.alice.ide.ast.type.merge.croquet.MembersToolPalette;
 import org.alice.ide.croquet.models.ui.formatter.FormatterState;
 import org.alice.ide.formatter.Formatter;
+import org.alice.ide.icons.IconFactoryManager;
 import org.alice.math.immutable.AxisAlignedBox;
 import org.alice.nonfree.NebulousIde;
-import org.alice.stageide.icons.IconFactoryManager;
-import org.alice.stageide.modelresource.AddFieldCascade;
-import org.alice.stageide.modelresource.ClassResourceKey;
-import org.alice.stageide.modelresource.EnumConstantResourceKey;
-import org.alice.stageide.modelresource.InstanceCreatorKey;
-import org.alice.stageide.modelresource.ResourceGalleryDragModel;
-import org.alice.stageide.modelresource.ResourceKey;
-import org.alice.stageide.modelresource.ResourceNode;
+import org.alice.stageide.modelresource.*;
 import org.lgna.croquet.DropSite;
 import org.lgna.croquet.SingleSelectTreeState;
 import org.lgna.croquet.Triggerable;
@@ -94,17 +83,10 @@ import java.util.UUID;
  * @author Dennis Cosgrove
  */
 public final class UriGalleryDragModel extends ResourceGalleryDragModel {
-  //public static final java.awt.Dimension URI_LARGE_ICON_SIZE = new java.awt.Dimension( ( getDefaultLargeIconSize().width * 3 ) / 2, getDefaultLargeIconSize().height );
-
   private static InitializingIfAbsentMap<URI, UriGalleryDragModel> map = Maps.newInitializingIfAbsentHashMap();
 
   public static UriGalleryDragModel getInstance(URI uri) {
-    return map.getInitializingIfAbsent(uri, new InitializingIfAbsentMap.Initializer<URI, UriGalleryDragModel>() {
-      @Override
-      public UriGalleryDragModel initialize(URI uri) {
-        return new UriGalleryDragModel(uri);
-      }
-    });
+    return map.get(uri, UriGalleryDragModel::new);
   }
 
   private final URI uri;
@@ -185,8 +167,8 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
         TypeSummary typeSummary = this.getTypeSummary();
         if (typeSummary != null) {
           List<String> hierarchyClsNames = typeSummary.getHierarchyClassNames();
-          if (hierarchyClsNames.size() > 0) {
-            String clsName = hierarchyClsNames.get(hierarchyClsNames.size() - 1);
+          if (!hierarchyClsNames.isEmpty()) {
+            String clsName = hierarchyClsNames.getLast();
             this.thingCls = Class.forName(clsName);
           }
         } else {
@@ -200,9 +182,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
   }
 
   private void appendStartIfNecessary(StringBuilder sb) {
-    if (sb.length() > 0) {
-      //pass
-    } else {
+    if (sb.isEmpty()) {
       sb.append("<html>");
       File file = new File(this.uri);
       if (file.exists()) {
@@ -220,7 +200,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
     if (typeSummary != null) {
       StringBuilder sb = new StringBuilder();
       List<String> procedureNames = typeSummary.getProcedureNames();
-      if (procedureNames.size() > 0) {
+      if (!procedureNames.isEmpty()) {
         this.appendStartIfNecessary(sb);
         sb.append("<em>procedures:</em><ul>");
         for (String procedureName : procedureNames) {
@@ -232,7 +212,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
       }
 
       List<FunctionInfo> functionInfos = typeSummary.getFunctionInfos();
-      if (functionInfos.size() > 0) {
+      if (!functionInfos.isEmpty()) {
         this.appendStartIfNecessary(sb);
         sb.append("<em>functions:</em><ul>");
         for (FunctionInfo functionInfo : functionInfos) {
@@ -245,7 +225,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
         sb.append("</ul>");
       }
       List<FieldInfo> fieldInfos = typeSummary.getFieldInfos();
-      if (fieldInfos.size() > 0) {
+      if (!fieldInfos.isEmpty()) {
         this.appendStartIfNecessary(sb);
         sb.append("<em>properties:</em><ul>");
         for (FieldInfo fieldInfo : fieldInfos) {
@@ -257,9 +237,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
         }
         sb.append("</ul>");
       }
-      if (sb.length() > 0) {
-        //pass
-      } else {
+      if (sb.isEmpty()) {
         sb.append("<html>nothing of note");
       }
       sb.append("</html>");
@@ -284,7 +262,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
       }
     } else {
       Formatter formatter = FormatterState.getInstance().getValue();
-      this.text = String.format(formatter.getNewFormat(), typeName, "");
+      this.text = formatter.getNewFormat().formatted(typeName, "");
     }
 
     if (typeName != null) {
@@ -303,35 +281,26 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
   }
 
   @Override
-  public final String getText() {
+  public String getText() {
     return this.text;
   }
 
   @Override
   public AxisAlignedBox getBoundingBox() {
     InstanceCreatorKey resourceKey = getResourceKey();
-    if (resourceKey != null) {
-      return resourceKey.getBoundingBox();
-    } else {
-      return null;
-    }
+    return resourceKey != null ? resourceKey.getBoundingBox() : null;
   }
 
   @Override
   public boolean placeOnGround() {
     InstanceCreatorKey resourceKey = this.getResourceKey();
-    if (resourceKey != null) {
-      return resourceKey.getPlaceOnGround();
-    } else {
-      return false;
-    }
+    return resourceKey != null && resourceKey.getPlaceOnGround();
   }
 
   @Override
   public List<ResourceNode> getNodeChildren() {
     ResourceKey resourceKey = this.getResourceKey();
-    if (resourceKey instanceof ClassResourceKey) {
-      ClassResourceKey classResourceKey = (ClassResourceKey) resourceKey;
+    if (resourceKey instanceof ClassResourceKey classResourceKey) {
       Class<? extends ModelResource> modelResourceClass = classResourceKey.getModelResourceCls();
       Class<?> thingCls = this.getThingCls();
       if (modelResourceClass != null) {
@@ -364,8 +333,7 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
     ResourceKey resourceKey = this.getResourceKey();
     if (resourceKey instanceof EnumConstantResourceKey) {
       return this.getLeftButtonClickOperation(null);
-    } else if (resourceKey instanceof ClassResourceKey) {
-      ClassResourceKey classResourceKey = (ClassResourceKey) resourceKey;
+    } else if (resourceKey instanceof ClassResourceKey classResourceKey) {
       if (classResourceKey.isLeaf()) {
         //should not happen
         return null;
@@ -399,16 +367,10 @@ public final class UriGalleryDragModel extends ResourceGalleryDragModel {
           base = EmptyIconFactory.getInstance();
         }
       }
-      //this.iconFactory = new org.alice.stageide.icons.UriGalleryIconFactory( this.uri, base, getDefaultLargeIconSize(), this.getIconSize() );
       this.iconFactory = base;
     }
     return this.iconFactory;
   }
-
-  //  @Override
-  //  public java.awt.Dimension getIconSize() {
-  //    return URI_LARGE_ICON_SIZE;
-  //  }
 
   @Override
   protected void appendRepr(StringBuilder sb) {
