@@ -42,17 +42,16 @@
  *******************************************************************************/
 package org.lgna.story.implementation.eventhandling;
 
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.CopyOnWriteArrayList;
-
+import edu.cmu.cs.dennisc.java.util.Maps;
 import org.lgna.common.ComponentExecutor;
 import org.lgna.story.MultipleEventPolicy;
 import org.lgna.story.Visual;
 import org.lgna.story.event.AbstractEvent;
 import org.lgna.story.implementation.SceneImp;
 
-import edu.cmu.cs.dennisc.java.util.Maps;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 /**
  * @author Matt May
@@ -104,13 +103,13 @@ public abstract class AbstractEventHandler<L, E extends AbstractEvent> {
   }
 
   protected void fireDequeue(L listener) {
-    if (queue.size() == 0) {
+    if (queue.isEmpty()) {
       return;
     }
     CopyOnWriteArrayList<E> internalQueue = new CopyOnWriteArrayList<>(queue);
     queue.clear();
-    while (internalQueue.size() > 0) {
-      fire(listener, internalQueue.remove(0));
+    while (!internalQueue.isEmpty()) {
+      fire(listener, internalQueue.removeFirst());
     }
     fireDequeue(listener);
   }
@@ -132,7 +131,7 @@ public abstract class AbstractEventHandler<L, E extends AbstractEvent> {
 
   protected void registerIsFiringMap(L eventListener, Visual[] targets) {
     isFiringMap.put(eventListener, new ConcurrentHashMap<>());
-    if ((targets != null) && (targets.length > 0)) {
+    if (targets != null) {
       for (Visual target : targets) {
         isFiringMap.get(eventListener).put(target, false);
       }
